# fw

./: .gitignore  COPYING  Makefile  Makefile.app  Makefile.bl808  Makefile.c-common  Makefile.fw  Makefile.sdk  Makefile.sim  README  accounts.json  hal.h  sdk  sdk-hal.h  setenv.sh
crypto/: base32.c  base32.h  hmac.c  hmac.h  hotp.c  hotp.h  sha.c  sha.h  tweetnacl.c
db/: block.c  block.h  db.c  db.h  dbcrypt.c  dbcrypt.h  pin.c  pin.h  secrets.c  secrets.h  settings.c  settings.h  span.c  span.h  storage-file.c  storage.h
font/: Makefile  PATCHES  cvtfont.py  font.c  font.h  show.c
gfx/: basic.c  gfx.h  long_text.c  long_text.h  mksintab.pl  ntext.c  ntext.h  poly.c  shape.c  shape.h  text.c  text.h  vfont.c
hw/: backlight.c  backlight.h  bl.c  bl.h  board.h  cst816.c  cst816.h  st7789.c  st7789.h  target-m0p.h  target-m1s.h
lib/: alloc.h  fmt.c  fmt.h  imath.c  imath.h  util.h
main/: fw.c  script.c  script.h  sdk.c  shared.c  sim.c  sim.h  version.c  version.h
rmt/: fake-rmt.c  fake-rmt.h  rmt-db.c  rmt-db.h  rmt.c  rmt.h
scripts/: pnmtorgb.pl
sdk/: CMakeLists.txt  Makefile  flash-storage.c  flash_prog_cfg.ini  proj.conf  sdk-main.c  sdk-usb.c  sdk-usb.h  usb_config.h
sys/: assert.h  debug.c  debug.h  mbox.c  mbox.h  rnd.c  rnd.h  timer.c  timer.h
tests/: Makefile  bip39.sh  db.sh  dir.sh  dirs.json  move.sh  pages.sh  rmt.sh  tsort.sh
tools/: Makefile  accenc.py  fake-rmt.c  fake-rmt.h  io.c  usbopen.c  usbopen.h
ui/: accounts.c  accounts.h  colors.h  demo.c  demo.h  pin.h  shape.c  shape.h  style.h  ui.c  ui.h  ui_account.c  ui_account.h  (+51 more)
(+46 files in other folders)
